2019-04-10  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/90025
	* gcc.c-torture/execute/pr90025.c: New test.

	PR c++/90010
	* gcc.dg/pr90010.c: New test.

2019-04-09  Uroš Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/ifcvt-onecmpl-abs-1.c
	(dg-options): Use -O2 -fdump-rtl-ce1.
	(dg-final): Scan ce1 RTL dump instead of asm dump.

2019-04-09  Matthew Malcomson  <matthew.malcomson@arm.com>

	PR target/90024
	* gcc.dg/torture/neon-immediate-timode.c: New test.

2019-04-09  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/89998
	* gcc.c-torture/compile/pr89998-1.c: New test.
	* gcc.c-torture/compile/pr89998-2.c: New test.

	PR target/90015
	* gcc.target/riscv/interrupt-conflict-mode.c (foo): Adjust expected
	diagnostics.

2019-04-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/90006
	* gcc.dg/vect/bb-slp-pr90006.c: New testcase.

2019-04-08  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/89865
	* gcc.target/i386/pr49095.c: Don't expect any RMW sequences.

	PR rtl-optimization/89865
	* gcc.target/i386/pr49095.c: Adjust number of expected RMW spots
	on ia32.

2019-04-01  Bin Cheng  <bin.cheng@linux.alibaba.com>

	PR tree-optimization/89725
	* gcc.dg/tree-ssa/pr89725.c: New test.

2019-04-08  Martin Liska  <mliska@suse.cz>

	* gcc.target/riscv/arch-1.c: Fix expected scanned pattern.

2019-04-08  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/89914
	* g++.dg/ext/has_nothrow_constructor-3.C: New.

2019-04-07  Uroš Bizjak  <ubizjak@gmail.com>

	PR target/89945
	* gcc.target/i386/pr89945.c: New test.

2019-04-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/87352
	* gfortran.dg/finalize_28.f90: Adjust count of __builtin_free.
	* gfortran.dg/finalize_33.f90: Likewise.
	* gfortran.dg/finalize_34.f90: New test.

2019-04-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/89981
	* gfortran.dg/entry_22.f90: New test.

2019-04-05  Marek Polacek  <polacek@redhat.com>
